# headsup

./: .env.example  .gitignore  README.md  clawnet.py  headsup.py  headsup_memory_dump.json  prd.md  pyproject.toml
core/: anakin.py  analyst.py  clawnet.py  container_agent.py  headsup.py  hydradb.py  isolation.py  memory.py  monitor.py  netwatch.py  openclaw.py  requirements.txt  sandbox.py  telegram_alert.py
core/data/: sample_intel.json
core/hydra-cli/: LICENSE
core/hydra-cli/src/hydra_cli/: __main__.py  cli.py  config.py
core/k8agent/: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  requirements.txt
core/k8agent/frontend/: index.html  package-lock.json
core/k8agent/frontend/src/: App.tsx  index.css
core/k8agent/k8s/: namespace.yaml  rbac.yaml
core/k8agent/k8s/demo-scenarios/: crashloop-demo.yaml  crashloop-deploy-demo.yaml  evicted-demo.yaml  hpa-stress-demo.yaml  imagepull-demo.yaml  node-pressure-demo.yaml  oomkill-demo.yaml  oomkill-deploy-demo.yaml  pending-demo.yaml  stalled-deploy.yaml  stress-generator.yaml
core/k8agent/scripts/: deploy-contract.sh  deploy-scenarios.sh  docker-setup.sh  run-all.sh  setup-minikube.sh  stress-test.sh
core/k8agent/src/: config.py  github_pr.py  main.py  models.py
core/k8agent/src/agents/: __init__.py  commander.py  comms.py  doctor.py  executor.py  scout.py
core/k8agent/src/api/: routes.py  (+1 more)
core/schema/: headsup_memory_dump.json  hydradb.tenant-schema.json
docs/: 2feature_README.md  anakindocs.md  clawnet.md  dockerized_runtime.md  everything.md  old_README.md  torefer.md  v2.md  v3.md  wireshark.md
docs/docs_k8/: ANALYSIS.md  ARCHITECTURE_DIAGRAM.md  CODEBASE_MAP.md  DEMO_GUIDE.md  FEATURES_COMPLETE.md  IMPLEMENTATION_REPORT.md  JUDGE_PRESENTATION.md  LEARNINGS.md  MID_EVAL.md  PROGRESS.md  X_FACTORS.md  architecture.md
hydra-cli/: README.md  pyproject.toml
hydra-cli/src/hydra_cli/: docker.py  main.py
scripts/: seed_demo.py
skills/: one-password.skill.md  openclaw-secure-linux-cloud.skill.md  skillspector.skill.md
(+46 files in other folders)
