[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "headsup"
version = "1.0.0"
description = "Terminal-native AI threat memory engine for personal computers"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "watchdog>=4.0",
    "openai>=1.0",
    "requests>=2.28",
    "send2trash>=1.8",
]

[project.optional-dependencies]
# Hydra / Postgres backend for HydraDB (otherwise SQLite is used)
postgres = [
    "psycopg2-binary>=2.9",
]

[project.scripts]
headsup = "headsup:main"

[tool.setuptools]
py-modules = ["headsup"]
packages = ["core"]
