[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydra-cli"
version = "0.0.4"
authors = [{ name = "Jonathan Dance", email = "jd+pypi@wuputah.com" }]
description = "Hydra CLI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]
license-files = ["LICENSE"]
dependencies = ["platformdirs", "docker", "toml"]

[project.scripts]
hydra = "hydra_cli:main"

[project.urls]
Homepage = "https://pypi.org/project/hydra-cli/"
Documentation = "https://docs.hydra.so/guides/local_development"
Repository = "https://github.com/hydradatabase/hydra-cli"
Issues = "https://github.com/hydradatabase/hydra-cli/issues"
